<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preview_root_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_view_preview_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/preview_data_heading_text"
        android:textColor="@color/primary"
        android:textSize="24sp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/preview_data_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/preview_message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            tools:text="Formats: dimension, enum Values: fill_parent, match_parent, wrap_content  Specifies the basic width of the view. This is a required attribute for any view inside of a containing layout manager. Its value may be a dimension (such as 12dip) for a constant width or one of the special constants" />
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button_share_sms"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_share_sms"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_share_whatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/greenDark"
        android:layout_marginBottom="16dp"
        android:text="@string/button_share_via_whatsapp_text"
        android:textAllCaps="false" />
</LinearLayout>